# min-max-correlation-clustering

./: .gitignore  DMN.py  data_loading.py  mmcc_solver.py  readme.md  requirements.txt  social_network_experiments.py  synthetic_experiment.py  util.py
mmcc_approximation_cpp/: CMakeLists.txt  setup.py
mmcc_approximation_cpp/include/: min_max_correlation_clustering.hxx
mmcc_approximation_cpp/src/: python_interface.cxx
mmcc_approximation_cpp/src/unit-tests/: example_graphs.hxx  min_max_correlation_clustering.cxx
